Fri, 31 Jul 2015 11:38:25 -0600  Sean Reifschneider  <jafo@tummy.com>

   *  1.57 release.

   * Fix for #75 and #76, mc.set(key, False) results in "ValueError:
     invalid literal for int()".  Reported by Carlos Sanchez on github.

Sun, 26 Jul 2015 14:44:20 -0600  Sean Reifschneider  <jafo@tummy.com>

   *  1.56 release.

   *  More patches for python3 from Victor Stinner #67.  Thanks!

   *  Tests moved out into their own unittest testcases.
      Patch by Jeremy Thurgood.

   *  Adding support for pluggable compressors.  Patch by cactus on github.

   *  Adding support for "noreply".  Patch by cactus on github.

   *  Allowing empty key in _multi() calls.  Suggested by sergio97 on github.

Sun, 21 Sep 2014 13:41:30 -0600  Sean Reifschneider  <jafo@tummy.com>

   *  1.54 release.

   *  Numerous patches to attempt to get Python 3 working, but
      tests are still failing under Python 3, so this code is not ready
      yet.

   *  MemcachedKeyCharacterError better describes key problem.
      Suggested by Roy Smith

   *  Added touch(), patch by erankor on github.

   *  Allow empty server list, patch by zewt on github.

   *  If unknown flags in get request, raises a value error rather than the
      code bombing out.

   *  Setting the SERVER_MAX_* values after import did not work, despite
      being documented to.  Reported by alexf101 on github.

Sun, 07 Jun 2013 11:12:18 -0600  Sean Reifschneider  <jafo@tummy.com>

   *  1.53 release.

   *  Fixing set_multi() so that if the server closes the connection
      it will no longer raise AttributeError.  Issue found and resolution
      reviewed by Ben Hoyt.

   *  readline() now will mark the connection dead if the read fails.
      It was just closing it before.  This is related to the set_multi()
      change but worth noting separately.  Thanks to Ben Hoyt.

   *  Discussion of the above: