@@ -1,3 +1,7 @@
+   *  delete() and delete_multi() now default the "time" argument to None,
+      since the protocol doesn't allow a time in some implementations.
+      Patch by oremj #27
+
 Fri, 31 Jul 2015 11:38:25 -0600  Sean Reifschneider  <jafo@tummy.com>
 
    *  1.57 release.
